assets/sass/components/navigation.scss
/*
 * Styles for the Navigation Bar
 */

.nav {
    background: white;
    width: 100%;
    .top-menu-items {
        text-decoration: none;
        margin: 0 auto;
        font-size: 2rem;
        color: black;
        &:hover {
            color: #7f7f7f;
        }
        img {
            height: 60px;
            padding: 10px 0;
        }
    }
    .nav-item {
        max-width: 20%;
    }
    @media (max-width: 600px) {
        position: relative;
        flex-direction: column;
        -webkit-flex-direction: column;
        .top-menu-items {
            margin: 15px auto;
            font-size: 3rem;
        }
    }
}

